// Copyright 2021-2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package spec;

import "google/protobuf/wrappers.proto";


service ServiceAll {

    rpc Unary (google.protobuf.StringValue) returns (google.protobuf.Int32Value) {
        option idempotency_level = IDEMPOTENT;
    };

    rpc ServerStream (google.protobuf.StringValue) returns (stream google.protobuf.Int32Value) {
        option idempotency_level = NO_SIDE_EFFECTS;
    };

    rpc ClientStream (stream google.protobuf.StringValue) returns (google.protobuf.Int32Value);

    rpc Bidi (stream google.protobuf.StringValue) returns (stream google.protobuf.Int32Value) {
        option deprecated = true;
    };

}
